--- a/app/assets/css/chat.css
+++ b/app/assets/css/chat.css
@@ -10,26 +10,13 @@ body {
 }
 
 body {
-  background: -webkit-linear-gradient(315deg, #044f48, #2a7561);
-  background: linear-gradient(135deg, #044f48, #2a7561);
+  background: -webkit-linear-gradient(315deg, #CCCFD5, #1F4055);
+  background: linear-gradient(135deg, #CCCFD5, #1F4055);
   background-size: cover;
   font-family: 'Open Sans', sans-serif;
   font-size: 12px;
   line-height: 1.3;
   overflow: hidden;
-}
-
-.bg {
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  background: url("https://images.unsplash.com/photo-1451186859696-371d9477be93?crop=entropy&fit=crop&fm=jpg&h=975&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925") no-repeat 0 0;
-  -webkit-filter: blur(80px);
-          filter: blur(80px);
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
 }
 
 /*--------------------
@@ -38,7 +25,7 @@ Chat
 .chat {
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 80%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   width: 300px;
