--- a/app/assets/css/chat.css
+++ b/app/assets/css/chat.css
@@ -1,27 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-html,
-body {
-  height: 100%;
-}
-
-body {
-  background: -webkit-linear-gradient(315deg, #CCCFD5, #1F4055);
-  background: linear-gradient(135deg, #CCCFD5, #1F4055);
-  background-size: cover;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 12px;
-  line-height: 1.3;
-  overflow: hidden;
-}
-
-/*--------------------
-Chat
---------------------*/
 .chat {
   position: absolute;
   top: 50%;
@@ -51,9 +27,6 @@ Chat
           flex-direction: column;
 }
 
-/*--------------------
-Chat Title
---------------------*/
 .chat-title {
   -webkit-box-flex: 0;
   -webkit-flex: 0 1 45px;
@@ -96,9 +69,6 @@ Chat Title
   height: auto;
 }
 
-/*--------------------
-Messages
---------------------*/
 .messages {
   -webkit-box-flex: 1;
   -webkit-flex: 1 1 auto;
@@ -253,9 +223,6 @@ Messages
           animation-delay: .3s;
 }
 
-/*--------------------
-Message Box
---------------------*/
 .message-box {
   -webkit-box-flex: 0;
   -webkit-flex: 0 1 40px;
@@ -302,26 +269,7 @@ Message Box
   background: #1D7745;
 }
 
-/*--------------------
-Custom Srollbar
---------------------*/
-.mCSB_scrollTools {
-  margin: 1px -3px 1px 0;
-  opacity: 0;
-}
-
-.mCSB_inside > .mCSB_container {
-  margin-right: 0px;
-  padding: 0 10px;
-}
-
-.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
-  background-color: rgba(0, 0, 0, 0.5) !important;
-}
-
-/*--------------------
-Bounce
---------------------*/
+/* Bounce */
 @-webkit-keyframes bounce {
   0% {
     -webkit-transform: matrix3d(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
