--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1,3 +1,24 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  background: -webkit-linear-gradient(315deg, #0F1E3C, #1F4055);
+  background: linear-gradient(135deg, #0F1E3C, #1F4055);
+  background-size: cover;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;
+  line-height: 1.3;
+  overflow: hidden;
+}
+
 .user-name-form {
 	margin: 0 auto;
 	margin-top: 20%;
@@ -23,11 +44,16 @@
 	background-color: #282828;
 }
 .user-name-form input {
-	border-color: black;
+	background-color: rgba(0, 0, 0, 0.48);
+	color: #B0B1B4;
+	border-color: transparent;
 }
 .glyphicon-warning-sign {
 	color: #f0ad4e;
 }
 .glyphicon-ok {
 	color: #5cb85c;
+}
+.glyphicon-pencil {
+	color: #F5F5F6;
 }
