--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,6 +7,7 @@
       <link type='text/css' rel='stylesheet' href='/misc/css/bootstrap.min.css' />
       <link type='text/css' rel='stylesheet' href='/misc/css/normalize.min.css' />
       <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Open+Sans'>
+			<link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Great+Vibes'>
       <link type="text/css" rel="stylesheet" href="/css/chat.css" />
       <link type="text/css" rel="stylesheet" href="/css/style.css" />
       <script type='text/javascript' src='/misc/js/jquery-1.12.2.min.js'></script>
