--- a/app/assets/css/chat.css
+++ b/app/assets/css/chat.css
@@ -11,7 +11,7 @@
   overflow: hidden;
   box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
   background: rgba(0, 0, 0, 0.5);
-  border-radius: 20px;
+  border-radius: 14px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -132,8 +132,8 @@
   float: right;
   color: #fff;
   text-align: right;
-  background: -webkit-linear-gradient(330deg, #248A52, #257287);
-  background: linear-gradient(120deg, #248A52, #257287);
+  background: -webkit-linear-gradient(330deg, #24568a, #257287);
+  background: linear-gradient(120deg, #24568a, #257287);
   border-radius: 10px 10px 0 10px;
 }
 .messages .message.message-personal::before {
